Kubernetes/deployment-service-booking.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
  namespace: event-booking-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
      - name: booking-service
        image: tauhaimran/booking-service:latest  # Replace with your image
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: event-booking-system
spec:
  selector:
    app: booking-service
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
