Kubernetes/deployment-service-event.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-service
  namespace: event-booking-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-service
  template:
    metadata:
      labels:
        app: event-service
    spec:
      containers:
      - name: event-service
        image: tauhaimran/event-service:latest  # Replace with your image
        ports:
        - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: event-service
  namespace: event-booking-system
spec:
  selector:
    app: event-service
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
