Kubernetes/deployment-service-notification.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: event-booking-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
      - name: notification-service
        image: tauhaimran/notification-service:latest  # Replace with your image
        ports:
        - containerPort: 5003
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: event-booking-system
spec:
  selector:
    app: notification-service
  ports:
    - protocol: TCP
      port: 5003
      targetPort: 5003
