Kubernetes/deployment-service-user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: event-booking-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: tauhaimran/user-service:latest  # Replace with your image
        ports:
        - containerPort: 5004
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: event-booking-system
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 5004
      targetPort: 5004
